--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -12,9 +12,9 @@ jobs:
       - uses: actions/checkout@v2
       - uses: goto-bus-stop/setup-zig@v1
         with:
-          version: 0.11.0
+          version: 0.13.0-dev.351+64ef45eb0
       - run: |
-          zig build -Dtarget=x86_64-windows -Doptimize=ReleaseSafe
+          zig build --release=safe -Dtarget=x86_64-windows
       - uses: actions/upload-artifact@v2
         with:
           name: upload ${{ matrix.os }}-${{ matrix.arch }}
